--- a/index.html
+++ b/index.html
@@ -1,238 +1,200 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-<meta charset="utf-8" />
-<title>オンラインチャット</title>
+  <meta charset="UTF-8">
+  <title>オンラインチャット（管理者付き）</title>
+  <style>
+    body { font-family: sans-serif; }
+    #chat { border:1px solid #aaa; height:200px; overflow-y:auto; padding:5px; }
+    #users { border:1px solid #aaa; height:150px; overflow-y:auto; padding:5px; margin-top:5px; }
+    .admin { color:red; font-weight:bold; }
+    .user { color:black; }
+  </style>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
+    import { getDatabase, ref, set, push, onValue, remove, get } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-database.js";
+
+    // === Firebase設定 ===
+    const firebaseConfig = {
+      databaseURL: "https://speak-598d0-default-rtdb.firebaseio.com/"
+    };
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    // === ユニークID（固定化） ===
+    let myId = localStorage.getItem("myId");
+    if (!myId) {
+      myId = "id-" + Math.random().toString(36).slice(2,10);
+      localStorage.setItem("myId", myId);
+    }
+
+    // === 参照 ===
+    const usersRef = ref(db, "users");
+    const chatRef = ref(db, "chat");
+    const banRef = ref(db, "banned");
+    const kickRef = ref(db, "kicked");
+
+    const userRef = uid => ref(db, "users/" + uid);
+    const bannedUserRef = uid => ref(db, "banned/" + uid);
+    const kickedUserRef = uid => ref(db, "kicked/" + uid);
+
+    // === 管理者コード ===
+    const ADMIN_CODE = "12480851548902103219856012019984997110646402160464684614897894056406480098774054016199403201689798750131065656";
+    let isAdmin = false;
+
+    // === UI要素 ===
+    const chatBox = document.getElementById("chat");
+    const usersBox = document.getElementById("users");
+
+    // === ページ開いた時に名無しで登録 ===
+    (async () => {
+      const snap = await get(userRef(myId));
+      if (!snap.exists()) {
+        await set(userRef(myId), { name: "名無し" });
+      }
+    })();
+
+    // === 名前決定 ===
+    document.getElementById("setNameBtn").onclick = async () => {
+      let name = document.getElementById("nameInput").value.trim();
+      if (!name) name = "名無し";
+      await set(userRef(myId), { name });
+    };
+
+    // === 管理者になる ===
+    document.getElementById("setAdminBtn").onclick = () => {
+      const code = document.getElementById("adminCode").value.trim();
+      if (code === ADMIN_CODE) {
+        isAdmin = true;
+        alert("管理者権限を取得しました");
+      } else {
+        alert("管理者コードが違います");
+      }
+    };
+
+    // === チャット送信 ===
+    document.getElementById("sendBtn").onclick = async () => {
+      const msg = document.getElementById("msgInput").value.trim();
+      if (!msg) return;
+      const snap = await get(userRef(myId));
+      const name = snap.val()?.name || "名無し";
+      await push(chatRef, { uid: myId, name, text: msg, time: Date.now() });
+      document.getElementById("msgInput").value = "";
+    };
+
+    // === チャット削除（管理者のみ） ===
+    document.getElementById("clearChatBtn").onclick = async () => {
+      if (!isAdmin) return alert("権限がありません");
+      await remove(chatRef);
+    };
+
+    // === BAN処理 ===
+    document.getElementById("banBtn").onclick = async () => {
+      if (!isAdmin) return alert("権限がありません");
+      const target = document.getElementById("targetName").value.trim();
+      if (!target) return;
+      const snap = await get(usersRef);
+      const users = snap.val() || {};
+      for (const uid in users) {
+        if (users[uid].name === target) {
+          await set(bannedUserRef(uid), true);
+          alert(target + " をBANしました");
+        }
+      }
+    };
+
+    // === Unban処理 ===
+    document.getElementById("unbanBtn").onclick = async () => {
+      if (!isAdmin) return alert("権限がありません");
+      const target = document.getElementById("targetName").value.trim();
+      if (!target) return;
+      const snap = await get(usersRef);
+      const users = snap.val() || {};
+      for (const uid in users) {
+        if (users[uid].name === target) {
+          await remove(bannedUserRef(uid));
+          alert(target + " のBANを解除しました");
+        }
+      }
+    };
+
+    // === Kick処理 ===
+    document.getElementById("kickBtn").onclick = async () => {
+      if (!isAdmin) return alert("権限がありません");
+      const target = document.getElementById("targetName").value.trim();
+      if (!target) return;
+      const snap = await get(usersRef);
+      const users = snap.val() || {};
+      for (const uid in users) {
+        if (users[uid].name === target) {
+          await set(kickedUserRef(uid), { by: myId, ts: Date.now() });
+          alert(target + " をKickしました");
+        }
+      }
+    };
+
+    // === チャット表示 ===
+    onValue(chatRef, snap => {
+      chatBox.innerHTML = "";
+      const msgs = snap.val() || {};
+      for (const key in msgs) {
+        const m = msgs[key];
+        const time = new Date(m.time).toLocaleTimeString();
+        let cls = "user";
+        if (isAdmin && m.uid === myId) cls = "admin";
+        chatBox.innerHTML += `<div class="${cls}">[${time}] ${m.name}: ${m.text}</div>`;
+      }
+      chatBox.scrollTop = chatBox.scrollHeight;
+    });
+
+    // === ユーザー表示 ===
+    onValue(usersRef, snap => {
+      usersBox.innerHTML = "";
+      const users = snap.val() || {};
+      for (const uid in users) {
+        const u = users[uid];
+        const role = (isAdmin && uid === myId) ? "👑" : "👤";
+        const cls = (isAdmin && uid === myId) ? "admin" : "user";
+        usersBox.innerHTML += `<div class="${cls}">${role} ${u.name}</div>`;
+      }
+    });
+
+    // === BAN監視 ===
+    onValue(bannedUserRef(myId), snap => {
+      if (snap.exists()) {
+        alert("BANされました。再入室できません。");
+        document.body.innerHTML = "<h1>あなたはBANされました</h1>";
+      }
+    });
+
+    // === Kick監視 ===
+    onValue(kickedUserRef(myId), snap => {
+      if (snap.exists()) {
+        alert("Kickされました。また再接続してください。");
+        document.body.innerHTML = "<h1>Kickされました</h1>";
+        // Kickは一時的 → すぐ削除して再入れる余地を残す
+        setTimeout(() => remove(kickedUserRef(myId)), 10000);
+      }
+    });
+
+    // === ページ閉じたら退室 ===
+    window.addEventListener("beforeunload", () => {
+      remove(userRef(myId));
+    });
+  </script>
 </head>
 <body>
-<h2>オンラインチャット</h2>
-
-<div id="mainUI">
-  <!-- 名前入力 -->
-  <div>
-    名前: <input id="name" type="text" placeholder="名前を入力">
-    <button id="setName">名前を決定</button>
-  </div>
-
-  <!-- 管理者コード入力 -->
-  <div>
-    管理者コード: <input id="adminCode" type="text" placeholder="管理者コード">
-    <button id="adminBtn">管理者になる</button>
-  </div>
-
-  <!-- 管理者用Ban/Unban -->
-  <div id="adminActions" style="display:none; margin-top:10px;">
-    <input id="targetName" type="text" placeholder="名前を入力">
-    <button id="banBtn">Ban</button>
-    <h4>ブラックリスト</h4>
-    <div id="blacklist" style="border:1px solid #ccc; width:300px; height:150px; overflow:auto; padding:5px;"></div>
-  </div>
-
-  <!-- オンラインユーザー表示 -->
-  <h3>オンラインユーザー</h3>
-  <div id="users" style="border:1px solid #ccc; width:400px; height:150px; overflow:auto; padding:5px;"></div>
-
-  <!-- チャット表示 -->
-  <h3>チャット</h3>
-  <div id="chat" style="border:1px solid #ccc; width:600px; height:300px; overflow:auto; padding:5px;"></div>
-
-  <!-- メッセージ送信 -->
-  <input id="msg" type="text" placeholder="メッセージを入力" style="width:400px;">
-  <button id="send">送信</button>
-
-  <!-- 管理者用チャット削除 -->
-  <button id="clear" style="display:none;">チャット削除（管理者用）</button>
-</div>
-
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
-import { getDatabase, ref, push, remove, onValue, set, onDisconnect, get } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-database.js";
-
-const discord = new Audio("notification.mp3"); // ← ここに音楽ファイルのURL
-  
-// ===== Firebase設定 =====
-const firebaseConfig = {
-  apiKey: "AIzaSyAmxNUpdY8aNxjNsn5ncodvEvnIJACLv0A",
-  authDomain: "speak-598d0.firebaseapp.com",
-  databaseURL: "https://speak-598d0-default-rtdb.firebaseio.com",
-  projectId: "speak-598d0",
-  storageBucket: "speak-598d0.firebasestorage.app",
-  messagingSenderId: "440395611113",
-  appId: "1:440395611113:web:a5a9f2c06b3a2d834d2978",
-  measurementId: "G-1F2JBRG8G8"
-};
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-
-// ===== DOM =====
-const mainUI = document.getElementById("mainUI");
-const chatDiv = document.getElementById("chat");
-const msgInput = document.getElementById("msg");
-const sendBtn = document.getElementById("send");
-const nameInput = document.getElementById("name");
-const setNameBtn = document.getElementById("setName");
-const adminCodeInput = document.getElementById("adminCode");
-const adminBtn = document.getElementById("adminBtn");
-const clearBtn = document.getElementById("clear");
-const usersDiv = document.getElementById("users");
-const adminActionsDiv = document.getElementById("adminActions");
-const targetNameInput = document.getElementById("targetName");
-const banBtn = document.getElementById("banBtn");
-const blacklistDiv = document.getElementById("blacklist");
-
-// ===== 管理者コード =====
-const ADMIN_CODE = "12480851548902103219856012019984997110646402160464684614897894056406480098774054016199403201689798750131065656";
-
-// ===== ユーザー固有ID =====
-let myId = localStorage.getItem("myId");
-if(!myId){
-    myId = Date.now().toString(36) + "-" + Math.floor(Math.random()*1e6).toString(36);
-    localStorage.setItem("myId", myId);
-}
-
-// ===== 状態 =====
-let baseName = "名無し";
-let myName = baseName + "#" + myId.slice(-4);
-let isAdmin = false;
-let amBanned = false;
-
-// ===== Refs =====
-const presenceRef = ref(db,"presence/"+myId);
-const usersRef = ref(db,"presence");
-const chatRef = ref(db,"chat");
-const bannedRef = id => ref(db,"banned/"+id);
-const adminFlagsRef = ref(db,"adminFlags");
-
-// ===== BANチェック =====
-async function checkBan() {
-  const snap = await get(bannedRef(myId));
-  if(snap.exists()) { amBanned=true; mainUI.innerHTML="<h2>あなたはBANされています</h2>"; return true; }
-  return false;
-}
-checkBan();
-
-// ===== 名前決定 =====
-setNameBtn.onclick = async () => {
-  if(await checkBan()) return;
-  baseName = nameInput.value.trim() || "名無し";
-  myName = baseName + "#" + myId.slice(-4);
-  await set(presenceRef,{name:myName,admin:isAdmin});
-  onDisconnect(presenceRef).remove();
-  alert("あなたの名前は「"+myName+"」です");
-};
-
-// ===== 管理者になる =====
-adminBtn.onclick = async () => {
-  const code = adminCodeInput.value.trim();
-  if(code===ADMIN_CODE){
-    isAdmin=true;
-    await set(ref(db,"adminFlags/"+myId),true);
-    onDisconnect(ref(db,"adminFlags/"+myId)).remove(); 
-    clearBtn.style.display="inline";
-    adminActionsDiv.style.display="block";
-    alert("管理者になりました");
-    loadBlacklist();
-  } else alert("管理者コードが違います");
-  adminCodeInput.value="";
-};
-
-// ===== メッセージ送信 =====
-sendBtn.onclick = async () => {
-  if(amBanned) return;
-  if(!myName){ alert("名前を設定してください"); return; }
-  const text = msgInput.value.trim();
-  if(!text) return;
-  discord.play()
-  await push(chatRef,{id:myId,name:myName,text: text,ts:Date.now()});
-  msgInput.value="";
-};
-
-// ===== チャット表示（リアルタイム更新） =====
-let adminMap={};
-onValue(adminFlagsRef,snap=>{adminMap=snap.val()||{};});
-onValue(chatRef, snap => {
-  const chat = snap.val() || {};
-  chatDiv.innerHTML = "";
-  for(const key in chat){
-    const data = chat[key];
-    const el = document.createElement("div");
-    el.style.color = adminMap[data.id] ? "red" : "black";
-    const hhmm = new Date(data.ts||Date.now()).toLocaleTimeString();
-    el.textContent = `[${hhmm}] ${data.name}: ${data.text}`;
-    chatDiv.appendChild(el);
-  }
-  chatDiv.scrollTop = chatDiv.scrollHeight;
-});
-
-// ===== オンラインユーザー表示 =====
-onValue(usersRef,snap=>{
-  const users=snap.val()||{};
-  usersDiv.innerHTML="";
-  for(const uid in users){
-    const u=users[uid];
-    const row=document.createElement("div");
-    row.dataset.uid=uid;
-    row.textContent=u.name;
-    usersDiv.appendChild(row);
-  }
-});
-
-// ===== Ban機能 =====
-banBtn.onclick=async()=>{
-  const target=targetNameInput.value.trim();
-  if(!target) return alert("名前を入力してください");
-  const snap=await get(usersRef);
-  const users=snap.val()||{};
-  for(const uid in users){
-    if(users[uid].name===target){
-      await set(bannedRef(uid),{by:myId,ts:Date.now(),name:users[uid].name});
-      await set(ref(db,"presence/"+uid),null);
-      return;
-    }
-  }
-};
-
-// ===== BAN監視 =====
-onValue(bannedRef(myId),snap=>{
-  amBanned=snap.exists();
-  if(amBanned) mainUI.innerHTML="<h2>あなたはBANされています</h2>";
-});
-
-// ===== チャット削除（管理者用・リアルタイム反映） =====
-clearBtn.onclick = async () => {
-  if(!isAdmin) return;
-  if(!confirm("全チャット削除しますか？")) return;
-  await remove(chatRef);
-};
-
-// ===== ブラックリスト表示 =====
-function loadBlacklist(){
-  onValue(ref(db,"banned"),snap=>{
-    const banned=snap.val()||{};
-    blacklistDiv.innerHTML="";
-    if(!isAdmin) return;
-    for(const uid in banned){
-      const row=document.createElement("div");
-      row.textContent=banned[uid].name + " ";
-      const unbanBtn=document.createElement("button");
-      unbanBtn.textContent="解除";
-      unbanBtn.onclick=()=>{ set(bannedRef(uid),null); };
-      row.appendChild(unbanBtn);
-      blacklistDiv.appendChild(row);
-    }
-  });
-}
-
-// ページロード時に管理者フラグがあればブラックリスト表示
-onValue(adminFlagsRef, snap => {
-  const admins = snap.val() || {};
-  if(admins[myId]){
-    isAdmin = true;
-    clearBtn.style.display="inline";
-    adminActionsDiv.style.display="block";
-    loadBlacklist();
-  }
-});
-</script>
+  <h2>オンラインチャット（管理者付き）</h2>
+  名前: <input id="nameInput"><button id="setNameBtn">名前を決定</button><br>
+  管理者コード: <input id="adminCode"><button id="setAdminBtn">管理者になる</button><br>
+  <div id="users"></div>
+  <div id="chat"></div>
+  <input id="msgInput" placeholder="メッセージを入力"><button id="sendBtn">送信</button>
+  <button id="clearChatBtn">チャット削除</button>
+  <br><br>
+  対象名: <input id="targetName">
+  <button id="banBtn">Ban</button>
+  <button id="unbanBtn">Unban</button>
+  <button id="kickBtn">Kick</button>
 </body>
 </html>
